# AI-Pro

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  web_app.py
controller/: chat_controller.py
model/: __init__.py  ai_engine.py  document_store.py
scripts/: ingest_document.py  ingest_project_files.py
src/ai_agent/: __init__.py  agent.py  cli.py  config.py
src/ai_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/ai_agent/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  openai_provider.py
static/css/: styles.css
static/js/: chat.js
templates/: index.html
view/: console_ui.py
